# wasm-token-dapp

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.css  index.html  package-lock.json  tailwind.config.js
.github/workflows/: build.yml
src/: crypto.rs  error.rs  main.rs  merkle.rs  store.rs  transaction.rs
src/components/: files.rs  mod.rs  phantom_wallet.rs
