[package]
name = "wasm-token-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.13.0"
base64 = { version = "0.13.0", features = [] }
borsh = { version = "0.9.3", features = [] }
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
getrandom = { version = "0.2.5", features = ["js"] }
gloo-file = { version = "0.2", features = ["futures"] }
# jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
log = "0.4.14"
sycamore = { git = "https://github.com/CalebEverett/sycamore", branch = "master", features=["suspense"] }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = " 0.4.29"
reqwest = "0.11.9"
ring = {version = "0.16.20", features = ["wasm32_c"] }
serde = { version = "1.0.136", features = [] }
thiserror = "1.0.30"
sha2 = { version = "0.10" }
solana-sdk = { git = "https://github.com/CalebEverett/solana.git", branch = "master"}
serde-wasm-bindgen = "0.4.2"

[dependencies.web-sys]
features = ["Event", "File", "FileReader", "Blob", "Window", "EventTarget", "MessageEvent"]
version = "0.3.56"

[dependencies.js-sys]
version = "0.3.56"
